# token-cw721-upgrade

artifacts/: checksums.txt  token_cw721.wasm
contracts/token-cw721/: Cargo.toml
contracts/token-cw721/examples/: schema.rs
contracts/token-cw721/src/: contract.rs  msg.rs  state.rs
