[package]
name = "token-cw721"
version = "0.3.0"
authors = ["knowhere-dev"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
cw-storage-plus = { version = "0.8.0" } 
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde-json-wasm = "0.3.1"
snafu = { version = "0.6.3" }
cw0 = { version = "0.8.0" }
cw2 = { version = "0.8.0" }
cw721 = { version = "0.8.0" }
loot = { path = "../../packages/loot", version = "0.2.0"}

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
